--- a/cyworld/styles/index.css
+++ b/cyworld/styles/index.css
@@ -26,7 +26,7 @@
 
 .innerbox__left {
     width: 208px;
-    height: 460px;
+    height: 472px;
     display: flex;
     flex-direction: column;
 }
@@ -86,7 +86,7 @@
 
 .left__body__profile {
     width: 100%;
-    height: 700px;
+    height: 100%;
     /* padding: 0; */
     display: flex;
     flex-direction: column;
@@ -116,7 +116,6 @@ label {
 
 .left__body__footer {
     width: 100%;
-    height: 100%;
     /* background-color: aqua; */
 }
 
@@ -145,5 +144,50 @@ line-height: normal;
 .innerbox__right {
     width: 524px;
     height: 472px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding-left: 5px;
     /* background-color: green; */
+}
+
+.innerbox__right__header {
+    width: 510px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding: 0px 14px;
+}
+
+.right__header__setting{
+    color: #55B2D4;
+font-family: PFStardust;
+font-size: 13px;
+font-style: normal;
+font-weight: 500;
+line-height: 16px; /* 123.077% */
+}
+
+.right__header__title {
+    color: #55B2D4;
+font-family: Malgun Gothic;
+font-size: 16px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+
+.innerbox__right__body {
+    width: 510px;
+    height: 445px;
+    border: 1px solid #999;
+    border-radius: 15px;
+    background-color: white;
+}
+
+iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
 }
