싸이월드 4일차 레이아웃 완료

--- a/cyworld/styles/game.css
+++ b/cyworld/styles/game.css
@@ -155,7 +155,7 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 5px;
+    padding: 5px 8px;
     margin: 11px 0px;
 }
 
