--- a/cyworld/styles/jukebox.css
+++ b/cyworld/styles/jukebox.css
@@ -15,6 +15,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-items: space-between;
+    align-items: center;
     padding: 20px 30px 29px 30px;
 }
 
@@ -23,15 +24,14 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
-    /* border: 1px solid blue; */
 }
 
 .wrapper__title {
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     margin-bottom: 8px;
-    /* border: 1px solid black; */
 }
 
 .title {
@@ -57,18 +57,13 @@ body {
 .divideLine {
     width: 100%;
     border-top: 1px solid #999;
-    /* margin-top: 8px; */
 }
 
 .albumWrapper {
-    /* border: 1px solid powderblue */
-    /* background-color: aqua; */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    /* padding-right: 16px;
-    padding-left: 16px; */
     padding: 20px 16px;
 }
 
@@ -104,19 +99,23 @@ body {
     line-height: normal;
 }
 
+.wrapper__body{
+    width: 100%;
+}
+
 .albumTable {
     width: 100%;
     height: 146px;
-    /* border: 1px solid green; */
 }
 
 table{
     width: 100%;
     height: 100%;
     border-collapse: collapse;
+    border-spacing: 0px;
 }
 
-th {
+.albumTable th {
     height: 20px;
     color: #999;
     font-family: Malgun Gothic;
@@ -127,10 +126,9 @@ th {
     background-color: #EEE;
     border-top: 1px solid #999;
     border-bottom: 1px solid #999;
-    text-align: start;
 }
 
-td {
+.albumTable td {
     height: 20px;
     color: #0F465E;
     font-family: Malgun Gothic;
@@ -141,11 +139,17 @@ td {
     border-bottom: 1px dotted #999;
 }
 
-.ckbox{
+.albumTable__checkbox{
     text-align: center;
 }
 
-.num {
+.album-table-checkbox {
+    width: 5%;
+    text-align: center;
+}
+
+.album-table-number {
+    width: 10%;
     color: #000;
     text-align: center;
     font-family: Malgun Gothic;
@@ -154,4 +158,13 @@ td {
     font-weight: 400;
     line-height: normal;
     text-align: center;
+}
+
+.album-table-song {
+    width: 45%;
+    text-align: left;
+}
+
+.album-table-artist {
+    width: 30%;
 }
