--- a/cyworld/styles/index.css
+++ b/cyworld/styles/index.css
@@ -190,3 +190,34 @@ iframe {
     height: 100%;
     border: none;
 }
+
+.navigation {
+    width: 62px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    left: 774px;
+    top: 110px;
+}
+
+.navigation__item {
+    width: 60px;
+    height: 30px;
+    border-radius: 0px 5px 5px 0px;
+    border: 1px solid #0F465E;
+    background-color: #298EB5;
+    color: #FFF;
+    text-align: center;
+    font-family: PFStardust;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
